--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 </head>
 <body class="bg-gray-100 p-4 text-base">
   <div class="max-w-4xl mx-auto bg-white p-4 sm:p-6 rounded-xl shadow space-y-6">
-    <div class="flex justify-between items-center">
-      <div>
-        <h1 class="text-2xl font-bold text-blue-800">トラック荷待ち時間記録</h1>
+    <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-2">
+      <div class="flex-1">
+        <h1 class="text-2xl font-bold text-blue-800 whitespace-nowrap overflow-hidden text-ellipsis">トラック荷待ち時間記録</h1>
         <div class="text-sm text-gray-500">📍 所属：<span id="locationDisplay"></span></div>
       </div>
-      <div class="flex items-center gap-3">
-        <a href="complete.html" class="text-blue-600 underline text-sm">✅ 完了済み一覧を見る</a>
-        <button onclick="location.reload(true)" class="text-sm text-white bg-gray-600 hover:bg-gray-700 px-3 py-1 rounded shadow">
+      <div class="flex flex-wrap items-center gap-3">
+        <a href="complete.html" class="text-blue-600 underline text-sm whitespace-nowrap">✅ 完了済み一覧を見る</a>
+        <button onclick="location.reload(true)" class="text-sm text-white bg-gray-600 hover:bg-gray-700 px-3 py-1 rounded shadow whitespace-nowrap">
           🔄 Reload（最新版に更新）
         </button>
       </div>
